@@ -7,6 +7,12 @@ Sources
 
 Releases
 {
+  v9r2p3
+  {
+    Modules = LHCbDIRAC:v9r2p3, LHCbWebDIRAC:v4r4p8
+    Depends = DIRAC:v6r20p11
+    LcgVer = v14r2
+  }
 
   v9r2p2
   {
